<resources>
    <string name="app_name">MovieMatch</string>

    <string name="set_username">Username:</string>
    <string name="set_room_number">write room number:</string>
    <string name="new_room_number">here\'s your room number:</string>
    <string name="new_room_number_share">share it with your friends</string>
    <string name="next">next</string>
    <string name="new_room">create new_room</string>
    <string name="set_room">already have room number</string>
    <string name="ready">Ready users:</string>

    <!-- generi -->
    <string name="genre1">Action</string>
    <string name="genre2">Adventure</string>
    <string name="genre3">Animation</string>
    <string name="genre4">Biography</string>
    <string name="genre5">Comedy</string>
    <string name="genre6">Crime</string>
    <string name="genre7">Documentary</string>
    <string name="genre8">Drama</string>
    <string name="genre9">Family</string>
    <string name="genre10">Fantasy</string>
    <string name="genre11">History</string>
    <string name="genre12">Horror</string>
    <string name="genre13">Music</string>
    <string name="genre14">Musical</string>
    <string name="genre15">Mystery</string>
    <string name="genre16">Romance</string>
    <string name="genre17">Sci-Fi</string>
    <string name="genre18">Short</string>
    <string name="genre19">Sport</string>
    <string name="genre20">Thriller</string>
    <string name="genre21">War</string>
    <string name="genre22">Western</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>